bge.types.KX_RadarSensor incorrect attributes #31813

Closed
opened 2012-06-13 09:53:40 +02:00 by Monster · 4 comments

%%%Hi,

Another one with Radar Sensor.

I used 2.63a to run the tests.

A)
The "Angle:" parameter at the GUI is set to 90.000. The radar sensor's attribute "angle" returns 1.0. That does not match.
Another test: GUI 126.8 -> angle = 2.0

It turns out that KX_RadarSensor.angle returns the base radius of the radar cone. According to the documentation and according to the name it should return an angle.
I suggest to change it that it returns the value entered at the GUI.

B)
Nevertheless this length parameter is quite useful.

KX_RadarSensor has another attribute: getConeHeight() [according to the documentation]
This is missing completely. I guess this is a bug in the documentation.

The funny thing is "angle" currently returns what getConeHeight() should provide. Because of that the configured angle value is not provided.

I suggest to introduce another attribute: coneHeight ( or better coneSize/coneRadius/radius )
This attribute can return what attribute "angle" returns now.
It could be read-only or another way to setup the radar sensor.

Thanks
Monster%%%

%%%Hi, Another one with Radar Sensor. I used 2.63a to run the tests. A) The "Angle:" parameter at the GUI is set to 90.000. The radar sensor's attribute "angle" returns 1.0. That does not match. Another test: GUI 126.8 -> angle = 2.0 It turns out that KX_RadarSensor.angle returns the base radius of the radar cone. According to the documentation and according to the name it should return an angle. I suggest to change it that it returns the value entered at the GUI. B) Nevertheless this length parameter is quite useful. KX_RadarSensor has another attribute: getConeHeight() [according to the documentation] This is missing completely. I guess this is a bug in the documentation. The funny thing is "angle" currently returns what getConeHeight() should provide. Because of that the configured angle value is not provided. I suggest to introduce another attribute: coneHeight ( or better coneSize/coneRadius/radius ) This attribute can return what attribute "angle" returns now. It could be read-only or another way to setup the radar sensor. Thanks Monster%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm committed a fix for A as r47869. As for B, use KX_RadarSensor.distance. The doc updates from r47869 will take a while to propagate to the online docs.

Does this solve both your problems then?%%%

%%%I'm committed a fix for A as r47869. As for B, use KX_RadarSensor.distance. The doc updates from r47869 will take a while to propagate to the online docs. Does this solve both your problems then?%%%

%%%I'm going to go ahead an close this. If you're still having problems, then this report can be reopened.%%%

%%%I'm going to go ahead an close this. If you're still having problems, then this report can be reopened.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31813
No description provided.